--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- Bangalore 32 Years Weather Project -->
     <div class="project">
       <h3>Bangalore 32 Years Weather Analysis</h3>
-      <p>This project involves analyzing the weather data of Bangalore over the past 32 years. Using Python and data visualization tools, I built an interactive dashboard to study trends in temperature, rainfall, and humidity patterns over time.</p>
+      <p>This project involves analyzing the weather data of Bangalore over the past 32 years. Using PowerBi, I built an interactive dashboard to study in temperature, rainfall, and humidity patterns using Excel data.</p>
       <a href="https://github.com/pavithra-155/bangalore-weather-powerBI" class="cta" target="_blank">View on GitHub</a>
     </div>
   
