--- a/index.html
+++ b/index.html
@@ -15,24 +15,7 @@
     /* Your entire CSS content from earlier goes here. Keep it same as the one you posted. */
   </style>
 </head>
-  <!-- Contact Section -->
-<section id="contact" data-aos="fade-up">
-  <h2>Contact Me</h2>
-  <div class="contact-links">
-    <a href="mailto:pavithra.nextstep@gmail.com" target="_blank" aria-label="Send Email">
-      <img src="https://img.icons8.com/ios-filled/50/4a00e0/new-post.png" alt="Email Icon" />
-    </a>
-    <a href="https://github.com/pavithra-155" target="_blank" aria-label="GitHub Profile">
-      <img src="https://img.icons8.com/ios-filled/50/4a00e0/github.png" alt="GitHub Icon" />
-    </a>
-    <a href="https://www.linkedin.com/in/pavithra-cloudengineer/" target="_blank" aria-label="LinkedIn Profile">
-      <img src="https://img.icons8.com/ios-filled/50/4a00e0/linkedin.png" alt="LinkedIn Icon" />
-    </a>
-    <a href="https://www.instagram.com/your_instagram_id" target="_blank" aria-label="Instagram Profile">
-      <img src="https://img.icons8.com/ios-filled/50/4a00e0/instagram-new.png" alt="Instagram Icon" />
-    </a>
-  </div>
-</section>
+
 
 <body>
 
@@ -60,8 +43,8 @@
   <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm Pavi, a passionate Cloud Engineer with hands-on experience in AWS, DevOps tools like Jenkins, Docker, and Terraform. I’m also the founder of <strong>NextStep</strong>, a student-led career starter studio.</p>
-    <p>I love building digital solutions, mentoring freshers, and helping others start strong in tech.</p>
+    <p>I'm Pavi, a passionate Cloud Engineer with hands-on experience in AWS, DevOps tools like Jenkins, Docker, and Terraform. I’m also working on a Brand <strong>NextStep</strong>, a student-led career starter studio.</p>
+    <p>I specialize in cloud computing, DevOps, and web technologies. I'm currently building scalable solutions using AWS, Jenkins, Docker, and Terraform. I'm also working on AI-powered applications like <em>Fit AI</em> that personalize fitness experiences.</p>
   </section>
 
   <!-- Skills Section -->
