--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,8 +22,13 @@
 
   <!-- Navbar -->
   <header>
+    
     <nav class="navbar">
       <div class="logo">Pavi.dev</div>
+  <!-- Hamburger Icon -->
+    <div class="hamburger" id="hamburger">
+      &#9776;
+    </div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
