--- a/index.html
+++ b/index.html
@@ -152,4 +152,8 @@
   </footer>
 
 </body>
+  <!-- AOS & JS Scripts -->
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script src="script.js"></script>
+
 </html>
