--- a/index.html
+++ b/index.html
@@ -154,6 +154,6 @@
 </body>
   <!-- AOS & JS Scripts -->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script src="script.js"></script>
+<script src="index.js"></script>
 
 </html>
