--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm Pavi, a passionate Cloud Engineer with hands-on experience in AWS, DevOps tools like Jenkins, Docker, and Terraform. I’m also working on a Brand <strong>NextStep</strong>, a student-led career starter studio.</p>
+    <p>I'm Pavi, a passionate Cloud Engineer with hands-on experience in Web development, AWS, DevOps tools like Jenkins and Docker. I’m also working on a Brand <strong>NextStep</strong>, a student-led career starter studio.</p>
     <p>I specialize in cloud computing, DevOps, and web technologies. I'm currently building scalable solutions using AWS, Jenkins, Docker, and Terraform. I'm also working on AI-powered applications like <em>Fit AI</em> that personalize fitness experiences.</p>
   </section>
 
