--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <!-- Resume Section -->
   <section id="resume">
     <h2>My Resume</h2>
-    <p>Download my resume or view it online.</p>
+    <p>Download my resume online.</p>
     <a href="resume_cloud.pdf" class="resume-btn" download>Download Resume</a>
   </section>
 
