--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <p>I'd love to connect with you! Reach out to me anytime 😊</p>
     <div class="contact-links">
       <a href="mailto:pavithrat1551@gmail.com" target="_blank">📧 Mail</a>
-      <a href="https://instagram.com/_pavi_x_" target="_blank">📸 Instagram</a>
+      <a href="https://instagram.com/_pavi_x__" target="_blank">📸 Instagram</a>
       <a href="https://linkedin.com/in/pavithra-t-77b349285" target="_blank">💼 LinkedIn</a>
       <a href="https://github.com/pavithra-155" target="_blank">🐙 GitHub</a>
     </div>
